added format conversion into pcap and erf formats, and have tested the writers for these formats.
Added a 'type' field to the format_t structure, which specifies the type of trace we're dealing with - erf, pcap, wag.

updated munge to use the new functions.

--- a/examples/munge/Makefile
+++ b/examples/munge/Makefile
@@ -1,6 +1,8 @@
-CFLAGS=-W -Wall -g -I/usr/local/include
+prefix=/usr/include
+
+CFLAGS=-W -Wall -g -I$(prefix)/include
 LDLIBS=-ltrace lib/libtrace_enc.a
-LDFLAGS=-L/tmp/lib
+LDFLAGS=-L$(prefix)/lib -L/tmp/lib
 
 all: munge
 
