--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 # Process this file with autoconf to produce a configure script.
 AC_INIT(libtrace,2.0.20,[libtrace@wand.net.nz],libtrace)
 AC_CONFIG_SRCDIR(lib/trace.c)
-AM_INIT_AUTOMAKE(libtrace,2.0.20)
+AM_INIT_AUTOMAKE
 
 AC_CONFIG_FILES([Makefile lib/Makefile])
 dnl GNU C library
@@ -111,6 +111,18 @@ AC_SYS_LARGEFILE
 AC_PROG_GCC_TRADITIONAL
 AC_CHECK_FUNCS(socket strdup)
 
+# configure time options for man pages
+AC_ARG_WITH(man,
+	    AC_HELP_STRING([--with-man],
+			   [install man pages by default]),
+
+	     if test "$withval" = yes
+	     then
+		     MANPAGES="docs/man/man3/[a-zA-Z]*.3]"
+	     else
+		     MANPAGES=""
+	     fi
+)
 
 # configure time options for use of DAG cards
 # borrowed from libpcap!
@@ -283,6 +295,7 @@ AC_SUBST([ADD_LIBS])
 AC_SUBST([ADD_LDFLAGS])
 AC_SUBST([ADD_INCLS])
 AC_SUBST([LTLIBOBJS])
+AC_SUBST([MANPAGES])
 
 dnl and finally, output our Makefiles
 AC_OUTPUT
