--- a/configure.in
+++ b/configure.in
@@ -179,6 +179,14 @@ if test "$with_dag" != no; then
 		DAG_TOOLS_DIR=$dag_tools_dir
 		AC_SUBST([DAG_TOOLS_DIR])
                 ac_cv_lbl_dag_api=yes
+		if test -r "$dag_lib_dir/libdag.so"; then
+			dag2_4=false
+		else
+			cp $dag_root/tools/dagopts.c lib/dagopts.c
+			cp $dag_root/tools/dagapi.c lib/dagapi.c
+			dag2_4=true
+		fi
+		AM_CONDITIONAL(DAG2_4, test x$dag2_4=xtrue)
         else
                 ac_cv_lbl_dag_api=no
         fi
