added replacement function for pcap_dump_flush

--- a/configure.in
+++ b/configure.in
@@ -97,7 +97,15 @@ AC_CHECK_LIB(pcap,pcap_open_dead,
 if test "$have_pcap_open_dead" = false; then
 	AC_REPLACE_FUNCS(pcap_open_dead)
 fi
-    
+   
+# Versions of libpcap earlier than 0.8 don't have pcap_dump_flush
+AC_CHECK_LIB(pcap,pcap_dump_flush,
+	     have_pcap_dump_flush=true,
+	     have_pcap_dump_flush=false)
+
+if test "$have_pcap_dump_flush" = false; then
+	AC_REPLACE_FUNCS(pcap_dump_flush)
+fi
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
