--- a/configure.in
+++ b/configure.in
@@ -121,6 +121,33 @@ AC_SYS_LARGEFILE
 AC_PROG_GCC_TRADITIONAL
 AC_CHECK_FUNCS(socket strdup)
 
+# configure time option for __attribute__((pure))
+test_pure=true
+AC_ARG_WITH(pure,
+	    AC_HELP_STRING([--with-pure],
+			   [use __attribute__((pure)) for optimisation]),
+[
+ 	if test "$withval" = no
+	then 
+		test_pure=false
+	else
+		test_pure=true
+	fi
+],[
+  	test_pure=true 
+]) 
+
+libtrace_pure=false
+if test "$test_pure" = true; then
+	AC_MSG_CHECKING([if compiler supports __attribute__((pure))])
+	AC_COMPILE_IFELSE([AC_LANG_PROGRAM(
+			   [[#define SIMPLE_FUNCTION __attribute__((pure))]])],
+		[AC_DEFINE(HAVE_ATTR_PURE,1,[define to test for __attribute__((pure)) support]) libtrace_pure=true],
+		[AC_DEFINE(HAVE_ATTR_PURE,0,[define to test for __attribute__((pure)) support]) libtrace_pure=false])
+
+	AC_MSG_RESULT($libtrace_pure)
+fi
+
 # configure time options for man pages
 AC_ARG_WITH(man,
 	    AC_HELP_STRING([--with-man],
@@ -287,6 +314,7 @@ function reportopt() {
 reportopt "Compiled with BPF filter support" $libtrace_bpf 
 reportopt "Compiled with PCAP support" $libtrace_pcap
 reportopt "Compiled with compressed trace (zlib) support" $libtrace_zlib
+reportopt "Compiled with __attribute__((pure))" $libtrace_pure
 reportopt "Compiled with DAG support (libdag)" $libtrace_dag
 reportopt "Compiled with DAG support (DAG 2.4)" $libtrace_dag2_4
 reportopt "Building man pages/documentation" $libtrace_doxygen
