--- a/configure.in
+++ b/configure.in
@@ -79,7 +79,7 @@ AC_FUNC_REALLOC
 AC_REPLACE_FUNCS(strndup)
 
 # Check to see if we have libpcap
-AC_CHECK_LIB(pcap,libtrace_pcap,
+AC_CHECK_LIB(pcap,pcap_open_live,
 	     libtrace_pcap=true,
 	     libtrace_pcap=false)
 
