Add new makefile/tracedump program

--- a/examples/tracedump/Makefile
+++ b/examples/tracedump/Makefile
@@ -1,40 +1,26 @@
-CXX=g++
+
 PREFIX?=/usr/local
-INCLUDES=-I$(PREFIX)/include
-# Directory to search for plugins
-LIBDIR="./"
-CXXFLAGS=-g -Wall $(INCLUDES) -rdynamic
-LDFLAGS=-L$(PREFIX)/lib
-LDLIBS=-ltrace -ldl 
-LINK_LAYERS=$(addsuffix .so,$(basename $(wildcard link_*.cc)))
-ETH_LAYERS=$(addsuffix .so,$(basename $(wildcard eth_*.cc)))
-IP_LAYERS=$(addsuffix .so,$(basename $(wildcard ip_*.cc)))
-TCP_LAYERS=$(addsuffix .so,$(basename $(wildcard tcp_*.cc)))
-PLUGINS=$(LINK_LAYERS) $(ETH_LAYERS) $(IP_LAYERS) $(TCP_LAYERS)
+CC=gcc
 
-all: tracedump $(PLUGINS) links
+INCLUDE = -I$(PREFIX)/include -I../../libpacketdump
+CFLAGS = -Wall -Wimplicit -Wformat -pipe -g -O2
+CFLAGS += $(INCLUDE)
+libdir = -L$(PREFIX)/lib -L../../libpacketdump
+LDLIBS = $(libdir) -ltrace -lpacketdump -ldl
 
-tracedump: tracedump.cc tracedump-libtrace.o tracedump-lib.o
+BINS = tracedump 
+.PHONY: all clean distclean install depend
 
-tracedump-lib.o: CXXFLAGS+=-DLIBDIR=$(LIBDIR)
-
-tcp_1720.so: 
-
-%.so:%.cc
-	$(CXX) $(CXXFLAGS) -fpic -shared $^ -o $@
-
-asn1-test: CXXFLAGS+=-DTEST
-asn1-test: asn1.cc
-	$(CXX) $(CXXFLAGS) $^ -o $@
-
-links: links.txt
-	./make_links
+all: $(BINS) 
 
 clean:
-	rm -f *.o tracedump *.so
+	$(RM) $(BINS) $(OBJS) core *.o
+
+distclean:
+	$(RM) $(BINS) $(OBJS)  core *.o
 
 install:
-	cp *.so $(LIBDIR)
+	@true
 
-.PHONY: clean all links
 
+# vim: noet ts=8 sw=8
