--- a/libpacketdump/Makefile
+++ b/libpacketdump/Makefile
@@ -126,13 +126,15 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
+LIBTRACE_LT_VERSION = 
+LIBTRACE_VERSION = 
 LN_S = ln -s
 LTLIBOBJS = 
 MAKEINFO = ${SHELL} /home/dlawson/code/libtrace/missing --run makeinfo
 MANPAGES = 
 OBJEXT = o
 PACKAGE = libtrace
-PACKAGE_BUGREPORT = libtrace@wand.net.nz
+PACKAGE_BUGREPORT = contact@wand.net.nz
 PACKAGE_NAME = libtrace
 PACKAGE_STRING = libtrace 2.0.23
 PACKAGE_TARNAME = libtrace
