--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,12 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(libtrace,2.0.23,[libtrace@wand.net.nz],libtrace)
+
+LIBTRACE_MAJOR=2
+LIBTRACE_MID=0
+LIBTRACE_MINOR=23
+
+AC_INIT(libtrace,2.0.23,[contact@wand.net.nz],libtrace)
 AC_CONFIG_SRCDIR(lib/trace.c)
-AM_INIT_AUTOMAKE(libtrace, 2.0.23)
+AM_INIT_AUTOMAKE(libtrace,2.0.23)
 
 AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile])
 dnl GNU C library
@@ -317,6 +322,8 @@ AC_SUBST([ADD_LDFLAGS])
 AC_SUBST([ADD_INCLS])
 AC_SUBST([LTLIBOBJS])
 AC_SUBST([MANPAGES])
+AC_SUBST([LIBTRACE_VERSION])
+AC_SUBST(LIBTRACE_LT_VERSION)
 
 dnl and finally, output our Makefiles
 AC_OUTPUT
