--- a/configure.in
+++ b/configure.in
@@ -2,13 +2,13 @@
 
 LIBTRACE_MAJOR=2
 LIBTRACE_MID=0
-LIBTRACE_MINOR=23
+LIBTRACE_MINOR=24
 
-AC_INIT(libtrace,2.0.23,[contact@wand.net.nz],libtrace)
+AC_INIT(libtrace,2.0.24,[contact@wand.net.nz],libtrace)
 AC_CONFIG_SRCDIR(lib/trace.c)
-AM_INIT_AUTOMAKE(libtrace,2.0.23)
+AM_INIT_AUTOMAKE(libtrace,2.0.24)
 
-AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile])
+AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile tools/Makefile tools/traceanon/Makefile tools/tracedump/Makefile tools/tracemerge/Makefile tools/tracereport/Makefile tools/tracertstats/Makefile tools/tracesplit/Makefile  ])
 dnl GNU C library
 dnl AC_GNU_SOURCE
 
@@ -17,6 +17,7 @@ AM_CONFIG_HEADER(config.h)
 #AC_CONFIG_HEADERS([config.h])
 dnl Checks for programs.
 AC_PROG_CC
+AC_PROG_CXX
 AC_PROG_INSTALL
 AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
